[nuevo tipo recompensa (thanks)] lineas de css para el icono y las imagenes m/s del icono

--- a/view/css/call.css
+++ b/view/css/call.css
@@ -356,6 +356,10 @@ div.call div.data .return ul li.design {
     background-image: url('/view/css/icon/s/design.png');
 }
 
+div.call div.data .return ul li.thanks {
+    background-image: url('/view/css/icon/s/thanks.png');
+}
+
 div.call div.data .return ul li.other {
     background-image: url('/view/css/icon/s/other.png');
 }
