--- a/view/css/node/common.css
+++ b/view/css/node/common.css
@@ -38,6 +38,7 @@ a.service{background-image:url('/view/css/icon/m/service.png')}
 a.manual{background-image:url('/view/css/icon/m/manual.png')}
 a.product{background-image:url('/view/css/icon/m/product.png')}
 a.design{background-image:url('/view/css/icon/m/design.png')}
+a.thanks{background-image:url('/view/css/icon/m/thanks.png')}
 a.other{background-image:url('/view/css/icon/m/other.png')}
 
 div#node-main div#side span.euro{ text-indent:-9999px;overflow:hidden}
