--- a/view/css/node/header.css
+++ b/view/css/node/header.css
@@ -94,7 +94,7 @@ div#node-header div.logos div.node-logo span {
 }
 
 /* botonera */
-div#header div#menu{position:relative;z-index:100;background:none repeat scroll 0 0 #2895CB !important}
+div#header div#menu{position:relative;z-index:100;}
 div#header div#menu > ul > li > a.button{padding:.4em .8em!important}
 div#header div#menu > ul > li > a{color:#fff !important}
 div#header div#menu > ul > li.help{margin-right:4px}
@@ -121,36 +121,20 @@ div#header div#menu > ul > li.about:hover,
 /*buscador*/
 div#header div#menu > ul > li.search fieldset{border: 1px solid #fff;}
 div#header div#menu > ul > li.search fieldset input[type="submit"]{background:url('/view/css/header/search-white.png') no-repeat scroll center center transparent !important}
-div#header div#menu > ul > li.search fieldset input[type="submit"]:hover{background-color:#58A0CD !important}
-
-/*rollover*/
-div#header div#menu > ul > li.community:hover,
-div#header div#menu > ul > li.login:hover,
-div#header div#menu > ul > li.dashboard:hover{background-color:#58A0CD !important}
-
-/*submenus*/
-div#header div#menu > ul > li.community > div > ul, div#header div#menu > ul > li.dashboard > div > ul{background-color:#2895CB}
-div#header div#menu > ul > li.community > div > ul > li > a:hover,
-div#header div#menu > ul > li.dashboard > div > ul > li > a:hover {
-    background-color: #58A0CD;
-}
 
 /* Pestaña de información/cerrar banner */
 div#header div#menu > ul > li.info{border-radius:5px 5px 0 0;width:35px;height:40px;position:absolute;left:-1px;bottom:0;background-color:#e9e5e2}
 div#header div#menu > ul > li.info > a{overflow:hidden;text-indent:2000px;display:block;line-height:2000px;width:23px;height:23px;left:50%;border:medium none;margin:9px 6px 8px}
-div#header div#menu > ul > li.info > a.open{background:url('/view/css/header/node_info_close.png') no-repeat left center transparent} /*si está abierto mostrar cerrar*/
-div#header div#menu > ul > li.info > a.open:hover{background:url('/view/css/header/node_info_close.png') no-repeat right center transparent}
-div#header div#menu > ul > li.info > a.close{background:url('/view/css/header/node_info.png') no-repeat left center transparent}/*si está cerrado mostrar abrir*/
-div#header div#menu > ul > li.info > a.close:hover{background:url('/view/css/header/node_info.png') no-repeat right center transparent}
+/* la imagen de abrir/cerrar depende de cada nodo */
 /* Fin de pestaña de información/cerrar banner */
 
 /* Banners de nodo */
 div#header div#node-banners{width: 100%; height:270px; margin: 0; background:url('/view/css/header/node-banner-bg.jpg');/*overflow:hidden; NO CAMBIAR... pero es que en firefox descuadra todo el banner */border:#dee2e6 1px solid;border-top:none;border:#000 1px transparent !important /*no tocar o el contenido se alinea de forma extraña dentro del carrousel*/;
 -webkit-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);-moz-box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);box-shadow:0px 2px 3px rgba(44, 50, 51, 0.4);}
 div#header div#node-banners div.node-banners-container{width:940px;height:270px;margin:0 auto;overflow:visible !important/*NO CAMBIAR*/}
-div.node-banners-container div.node-banner{width:940px;height:270px;/*overflow:hidden; NO CAMBIAR... pero es que en firefox descuadra todo el banner */}
+div.node-banners-container div.node-banner{display:none; width:940px;height:270px;/*overflow:hidden; NO CAMBIAR... pero es que en firefox descuadra todo el banner */}
 div.node-banners-container div.node-banner > div.title{padding-top: 25px; margin-left: 50px;line-height:25px;font-size:25px;color:#585a5c}
-div.node-banners-container div.node-banner > div.short-desc{margin-top: 25px; margin-left: 50px; line-height:30px;font-size:20px;color:#1f81bb; max-width: 450px;}
+div.node-banners-container div.node-banner > div.short-desc{margin-top: 25px; margin-left: 50px; line-height:30px;font-size:20px;max-width: 450px;}
 div.node-banners-container div.node-banner.active > div.title{color:#20B2B3 !important;}
 div.node-banners-container div.node-banner a.expand {padding: 0;position: absolute;width: 940px;height: 270px;z-index: 99;}
 
@@ -159,10 +143,9 @@ div.node-banners-container div.node-banner a.expand {padding: 0;position: absolu
 div#node-banners-controler{position: absolute;width: 100%; top: 448px;z-index:100;overflow:auto;height:auto;text-align:center}
 ul.bannerspage{list-style:none; z-index:100;  padding:0;  margin:0; display:inline-block}
 ul.bannerspage li{ cursor:pointer;  display:block;  float:left;  overflow:hidden; margin:0px 4px 5px 4px}
-ul.bannerspage li a{display:block;width:12px;height:12px;margin-top:2px; background-color:#d9cfd2;color:#d9cfd2;
--webkit-border-radius: 100px;-moz-border-radius: 100px;border-radius: 100px;}
+ul.bannerspage li a{display:block;width:12px;height:12px;margin-top:2px;-webkit-border-radius: 100px;-moz-border-radius: 100px;border-radius: 100px;}
+ul.bannerspage li a{background-color:#d9cfd2;color:#d9cfd2;}
 ul.bannerspage li a:hover{ background-color:#808184;  color:#808184}
-ul.bannerspage li.current a{ background-color:#1f81bb !important;  color:#1f81bb !important}
 /* fin paginación de los banners*/
 
 /*
