--- a/view/css/node/home.css
+++ b/view/css/node/home.css
@@ -40,15 +40,15 @@ p.quantity span.euro{display:block;float:left;height:30px;width:30px;}
 div.side_widget > div{padding:13px 8px 13px 13px;background:#fff;margin-bottom:6px;height:auto;overflow:auto;}
 div.side_widget > div > p.title{margin-top:7px}
 div.side_widget > div.button{}
-div.side_widget > div.button.current{color:#1f81bb}
+div.side_widget > div.button.current{}
 
 div.side_widget > div.button > p{line-height:14px;margin:0} /*same line-height as font-size in p > a*/
 div.side_widget > div.button > p > a{display:block;text-decoration:none;background:url('/view/css/arrows.gif') no-repeat right -4px;font-size:14px;color:#929394;}
 div.side_widget > div.button > p > a:hover{color:#58595B;background-position:right -38px}
-div.side_widget > div.button.current > p > a{color:#1f81bb;background-position:right}
+div.side_widget > div.button.current > p > a{background-position:right}
 
 div.side_widget > div.rewards p.title, div.side_widget > div.categories p.title{color:#929394}
-div.side_widget > div.categories.current p.title, div.side_widget > div.rewards.current p.title{color:#1F81BB;font-size:14px !important}
+div.side_widget > div.categories.current p.title, div.side_widget > div.rewards.current p.title{font-size:14px !important}
 div.side_widget > div.rewards a{display:block;float:left;margin:0 8px 5px 0;height:32px;width:32px; text-indent:-9999px;overflow:hidden;
 -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";filter: alpha(opacity=50);  -moz-opacity: 0.5; -khtml-opacity: 0.5;  opacity: 0.5;}
 div.side_widget > div.rewards a:hover{-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter: alpha(opacity=100);  -moz-opacity: 1; -khtml-opacity: 1;  opacity: 1;}
