--- a/nodesys/andalucia/view/css/config.css
+++ b/nodesys/andalucia/view/css/config.css
@@ -20,18 +20,18 @@ div#node-header div.logos div.node-home > a:hover {
 }
 
 div#header div#menu{background:none repeat scroll 0 0 #27AD7A !important}
-div#header div#menu > ul > li.search fieldset input[type="submit"]:hover{background-color:#347D6B !important}
+div#header div#menu > ul > li.search fieldset input[type="submit"]:hover{background-color:#5AB891 !important}
 
 /*rollover*/
 div#header div#menu > ul > li.community:hover,
 div#header div#menu > ul > li.login:hover,
-div#header div#menu > ul > li.dashboard:hover{background-color:#347D6B !important}
+div#header div#menu > ul > li.dashboard:hover{background-color:#5AB891 !important}
 
 /*submenus*/
 div#header div#menu > ul > li.community > div > ul, div#header div#menu > ul > li.dashboard > div > ul{background-color:#27AD7A}
 div#header div#menu > ul > li.community > div > ul > li > a:hover,
 div#header div#menu > ul > li.dashboard > div > ul > li > a:hover {
-    background-color: #347D6B;
+    background-color: #5AB891;
 }
 
 /* Pestaña de información/cerrar banner */
