--- a/view/css/call/sponsors.css
+++ b/view/css/call/sponsors.css
@@ -1,9 +1,11 @@
 #sponsors {
 	float: right;
 	position: relative;
-	width: 220px;
+	width: 195px;
 	overflow: hidden;
-	height: 140px;
+	height: 150px;
+	padding: 15px 15px 0 15px;
+	border-left: solid 1px #ccc;
 }
 
 #sponsors .slides_container {
@@ -64,7 +66,7 @@ div#sponsors .slidersponsors-ctrl {
 	padding:0px;
     display: block;
     position: absolute;
-    top: 110px;
+    top: 125px;
 }
 
 div#sponsors .slidersponsors-ctrl .next,
