--- a/view/css/call/projects.css
+++ b/view/css/call/projects.css
@@ -1,31 +1,36 @@
 /* Projects */
 
 .projects #content {
-	background-color: transparent;
-	padding: 0;
-	width: 540px;
+    background-color: transparent;
+    padding: 0;
+    width: 540px;
+}
+
+.projects #content h2.title {
+    padding: 5px 0 0 15px;
 }
 
 #project-list {
-	padding: 0 0 50px 15px;
-	margin: 0;
-	overflow: hidden;
+    padding: 0;
+    padding-left: 15px;
+    margin: 0;
+    overflow: hidden;
 }
 
 #project-list li {
-	padding: 5px;
-	margin: 0 10px 10px 0;
-	list-style-type: none;
-	background-color: #ebe9e9;
-	width: 155px;
-	float: left;
-	min-height: 245px;
-	position: relative;
-	overflow: hidden;
+    padding: 5px;
+    margin: 0 5px 10px 0;
+    list-style-type: none;
+    background-color: #ebe9e9;
+    width: 160px;
+    float: left;
+    min-height: 245px;
+    position: relative;
+    overflow: hidden;
 }
 
 #project-list li.active {
-	background-color: #f8f8f8 !important;
+    background-color: #f8f8f8 !important;
 }
 
 #project-list li .image {
@@ -33,16 +38,16 @@
     text-align: center;
     background-color: #deddde;
     padding: 0 !important;
-	overflow: hidden;
+    overflow: hidden;
     position: relative;
 }
 
 #project-list li img {
-	width: 160px;
+    width: 160px;
 }
 
 #project-list li .categories {
-	text-align: left;
+    text-align: left;
     color: #ffffff;
     background-color: #19b5b3;
     font-size: 0.8em;
@@ -57,61 +62,63 @@
     left: 0;
 }
 
-.projects #content h2.title {
-	padding: 5px 0 0 15px;
+#project-list li .title {
+    height: 22px;
+    overflow: hidden;
+    margin: 10px 0 5px;
+    line-height: .8em;
 }
 
 #project-list li .author {
-	margin: 0;
-	font-size: 10px;
-	color: #a7a9ac;
+    margin: 0;
+    font-size: 10px;
+    color: #a7a9ac;
+    text-transform: none !important;
+    height: 26px;
+    overflow: hidden;
 }
 
 #project-list li .author a {
-	text-decoration: none;
-	font-size: 10px;
-	color: #a7a9ac;
+    text-decoration: none;
+    font-size: 10px;
+    color: #a7a9ac;
     position: relative;
     z-index: 999;
 }
 
 #project-list li.active .author a:hover {
-	color: #20b3b2;
-}
-
-#project-list li .title {
-	height: 20px;
+    color: #20b3b2;
 }
 
 #project-list li .title a {
-	text-transform: uppercase;
-	text-decoration: none;
+    text-transform: uppercase;
+    text-decoration: none;
 }
 
 #project-list li.active .title a {
-	color: #20b3b2;
+    color: #20b3b2;
 }
 
 #project-list li .description {
-	margin: 5px 0;
-	font-size: .9em;
-	height: 50px;
+    margin: 5px 0;
+    font-size: 11px;
+    height: 45px;
     overflow: hidden;
 }
 
 #project-list li div.obtained {
     position: relative;
-	padding-left: 10px;
-	padding-bottom: 10px;
-	border-bottom: 1px solid #a7a9ac;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #a7a9ac;
 }
 
 #project-list li span.obtained {
-	text-transform: uppercase;
-	font-size: 11px;
-	padding-top: 10px;
-	border-top: 1px solid #a7a9ac;
-	margin: 10px 0 5px;
+    text-transform: uppercase;
+    font-size: 11px;
+    padding-top: 10px;
+    border-top: 1px solid #a7a9ac;
+    margin: 10px 0 5px;
     display: block;
 }
 
@@ -141,24 +148,21 @@
 }
 
 #project-list li .days {
-	font-size: 11px;
-	margin: 1em 0 .5em;
-}
-
-#project-list li .days.red span {
-	color: #ff0000;
-	font-weight: bold;
+    font-size: 11px;
+    margin: 1em 0 .5em;
+    color: #ff0000;
 }
 
 #project-list li .days span {
-	text-transform: uppercase;
+    text-transform: uppercase;
+    color: #59595C;
 }
 
 a.expand {
-	position:absolute;
-	top:0;bottom:0;left:0;right:0;
-	width:100%;
-	z-index:99;
+    position:absolute;
+    top:0;bottom:0;left:0;right:0;
+    width:100%;
+    z-index:99;
     padding: 0px;	
 }
 
@@ -168,43 +172,44 @@ a.expand {
     z-index: 899;
     text-align: left;
     color: #ffffff;
-    font-size: 1.0em;
+    font-size: 10px;
     font-weight: normal;
     text-transform: uppercase;
-    width: 226px;
-    height: 31px;
-	font-style: normal;
-	letter-spacing: 1px;
-	margin-top: 8px;
-	line-height: 32px;
-	padding: 1px 0px 0px 30px;
+    width: 160px;
+    height: 27px;
+    font-style: normal;
+    letter-spacing: 0;
+    margin-top: 8px;
+    line-height: 27px;
+    padding: 0;
+    padding-left: 25px;
 }
 
 #project-list li div.image div.tagmark.green {
-    background:url('/view/css/project/tagmark_green.png') 0 0 no-repeat;
+    background:url('/view/css/node/tagmark_green.png') 0 0 no-repeat;
 }
 
 #project-list li div.image div.tagmark.red {
-    background:url('/view/css/project/tagmark_red.png') 0 0 no-repeat;
+    background:url('/view/css/node/tagmark_red.png') 0 0 no-repeat;
 }
 
 #project-list li div.image div.tagmark.violet {
-    background:url('/view/css/project/tagmark_violet.png') 0 0 no-repeat;
+    background:url('/view/css/node/tagmark_violet.png') 0 0 no-repeat;
 }
 
 #project-list li div.image div.tagmark.grey {
-    background:url('/view/css/project/tagmark_grey.png') 0 0 no-repeat;
+    background:url('/view/css/node/tagmark_grey.png') 0 0 no-repeat;
 }
 
 /* tipografia pequeña para que quepa todo */
 #project-list li div.image div.tagmark span.small {
-    font-size: 0.8em !important;
-	line-height: normal;
+    font-size: 8px !important;
+    line-height: normal;
 }
 
 /* Dos lineas para el en marcha y aun puedes */
 #project-list li div.image div.tagmark.twolines {
     padding-top: 4px !important;
-	font-weight: normal;
-	font-style: normal;
+    font-weight: normal;
+    font-style: normal;
 }
