--- a/view/css/call/view.css
+++ b/view/css/call/view.css
@@ -963,12 +963,15 @@ h2.title {
 }
 
 p.subtitle {
-	color: #95268d;
 	font-weight: normal;
 	font-size: 16px;
-	margin: 0 0 10px;
+	margin: 15px 10px 10px;
 	line-height: 1.2em;
 	padding: 0 60px 5px 15px;
+}
+
+p.subtitle.violet {
+	color: #95268d;
 }
 
 p.subtitle.red {
