[convocatoria] un poco más de espacio al boton de facebook

--- a/view/css/call/view.css
+++ b/view/css/call/view.css
@@ -197,6 +197,7 @@ div#main ul#list>li {
 
 #social-actions .fb-like {
     float: right;
+    margin-right: 5px;
 }
 
 #social-actions .fb-like span {
