--- a/view/css/home.css
+++ b/view/css/home.css
@@ -216,14 +216,17 @@ body.home div#main div.widget.feed div.see_more a:hover {
 }
 
 /* Padrinos en portada*/
+body.node.home div#node-patrons div.patron,
 body.home div#main div.patron {
     display: inline-block;
     width: 185px;
 }
+body.node.home div#node-patrons div.patron + div.patron,
 body.home div#main div.patron + div.patron {
     margin-left: 30px;
 }
 
+body.node.home div#node-patrons div.patron > a.expand,
 body.home div#main div.patron > a.expand {
     position: absolute;
     top: 0px;
@@ -232,6 +235,7 @@ body.home div#main div.patron > a.expand {
     height: 100%;
 }
 
+body.node.home div#node-patrons div.patron > div.box,
 body.home div#main div.patron > div.box {
     width: 185px;
     height: 94px;
@@ -239,12 +243,14 @@ body.home div#main div.patron > div.box {
 	border-bottom: 1px solid #20B2B3;
 }
 
+body.node.home div#node-patrons div.patron > div.box > div.avatar,
 body.home div#main div.patron > div.box > div.avatar {
     width: 112px;
     height: 74px;
     margin: 10px auto;
 }
 
+body.node.home div#node-patrons div.patron > div.reco,
 body.home div#main div.patron > div.reco {
     padding: 3px 0;
     text-transform: uppercase;
@@ -252,10 +258,12 @@ body.home div#main div.patron > div.reco {
     line-height: 17px;
 }
 
+body.node.home div#node-patrons div.patron > div.reco > span,
 body.home div#main div.patron > div.reco > span {
 	color: #20B2B3;
 }
 
+body.node.home div#node-patrons div.patron > div.reco > span.name,
 body.home div#main div.patron > div.reco > span.name {
     font-size: 12px;
 	font-weight: bold;
