[elemento portada nodo, padrinos] corrección para el a.expand cuando no hay slider control

--- a/view/css/home.css
+++ b/view/css/home.css
@@ -220,6 +220,7 @@ body.node.home div#node-patrons div.patron,
 body.home div#main div.patron {
     display: inline-block;
     width: 185px;
+    position: relative;
 }
 body.node.home div#node-patrons div.patron + div.patron,
 body.home div#main div.patron + div.patron {
