--- a/view/css/call/view.css
+++ b/view/css/call/view.css
@@ -972,12 +972,12 @@ a.button.info {
 
 a.button.long {
 	font-size: 15px;
-	padding: 0.4em 1.6em;
+	/*padding: 0.4em 1.6em;*/
 }
 
 a.button.join {
 	font-size: 15px;
-	padding: 0.4em 2.1em;
+	/*padding: 0.4em 2.1em;*/
 	
 }
 
